applications/dev/backend/app-backend.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  labels:
    application: backend
    stage: dev
  name: qr-backend-dev
  namespace: admins-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      application: backend
      stage: dev
  strategy:
    blueGreen:
      activeService: backend-dev-svc
      autoPromotionEnabled: true
      autoPromotionSeconds: 180
      maxUnavailable: 1
      scaleDownDelaySeconds: 10
  template:
    metadata:
      labels:
        application: backend
        stage: dev
    spec:
      containers:
      - env:
        - name: DATABASE_HOST
          valueFrom:
            configMapKeyRef:
              key: DATABASE_HOST
              name: db-dev-cm
        - name: DATABASE_PORT
          valueFrom:
            configMapKeyRef:
              key: DATABASE_PORT
              name: db-dev-cm
        - name: DATABASE_NAME
          valueFrom:
            configMapKeyRef:
              key: DATABASE_NAME
              name: db-dev-cm
        - name: APP_URL
          valueFrom:
            configMapKeyRef:
              key: APP_URL
              name: frontend-app-dev-cm
        - name: API_URL
          valueFrom:
            configMapKeyRef:
              key: API_URL
              name: backend-app-dev-cm
        - name: APP_ENV
          valueFrom:
            configMapKeyRef:
              key: APP_ENV
              name: backend-app-dev-cm
        - name: DATABASE_USER
          valueFrom:
            secretKeyRef:
              key: DATABASE_USER
              name: db-dev-secrets
        - name: DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: DATABASE_PASSWORD
              name: db-dev-secrets
        image: qrsmartmenu/backend:0.1.0-rc53
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 2
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 200
          periodSeconds: 10
          successThreshold: 1
        name: backend-dev
        ports:
        - containerPort: 3000
          name: backend-port
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 5
          successThreshold: 2
      restartPolicy: Always
