applications/dev/backend/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-network-policy-dev
  namespace: dev
spec:
  egress: 
    - {}
  ingress:
    - from:
        - ipBlock:
            cidr: "0.0.0.0/0"
        - podSelector:
            matchLabels:
              application: frontend
              stage: dev
    - ports:
        - port: 3000
          protocol: "TCP"
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      application: backend
      stage: dev
